fix : modified the z-index value since the tooltip was blocking it

--- a/src/css/tabs/osd.less
+++ b/src/css/tabs/osd.less
@@ -1,5 +1,5 @@
 .tab-osd {
-    --z-index-preset-position-menu: 100;
+    --z-index-preset-position-menu: 10001;
     .info {
         margin: 10px 0 0 0;
         position: relative;
